<resources>
    <string name="app_name">HaBit</string>

    <string name="title_list_of_habits">Current Habits</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_more">More</string>

    <string name="item_habit_button_text">Complete</string>
    <string name="button_confirm">Confirm</string>
    <string name="content_desc_add_new_habit">add new habit</string>
    <string name="add_write_name">Write name of the habit</string>
    <string name="add_write_description">Write description of the habit</string>
    <string name="add_write_num_day">Inter the number of days</string>
    <string name="detail_write_description">Write what you think about it</string>
</resources>