<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list_of_task">

    <fragment
        android:id="@+id/navigation_list_of_task"
        android:name="com.example.habit.ui.listOfHabits.ListOfHabitsFragment"
        android:label="@string/title_list_of_habits"
        tools:layout="@layout/fragment_list_of_habits" />

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.example.habit.ui.statistic.StatisticFragment"
        android:label="@string/title_statistic"
        tools:layout="@layout/fragment_statistic" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.habit.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>